customized and working

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,9 +10,12 @@ import IntroTest from '../slyds/intro.test.astro'
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="theme-color" content="#000000">
+
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  <link rel="stylesheet" href="/src/index.css">
+  <link rel="stylesheet" href="/src/styles/index.css">
+
 	<title>CSS Day 2022</title>
 </head>
 <body>
