--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,8 @@ import IntroTest from '../slyds/intro.test.astro'
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#000000">
 
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+	<link rel="icon" href="/favicon.svg" type="image/svg+xml">
+	
   <link rel="stylesheet" href="/src/styles/index.css">
 
 	<title>CSS Day 2022</title>
