reducing and testing

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import IntroTest from '../slyds/intro.test.astro'
+import IntroTest2 from '../slyds/intro.test2.astro'
 ---
 
 <script>
@@ -14,7 +15,7 @@ import IntroTest from '../slyds/intro.test.astro'
 	<meta name="theme-color" content="#000000">
 
 	<link rel="icon" href="/favicon.svg" type="image/svg+xml">
-	
+
   <link rel="stylesheet" href="/src/styles/index.css">
 
 	<title>CSS Day 2022</title>
@@ -23,22 +24,8 @@ import IntroTest from '../slyds/intro.test.astro'
 	<slyds>
 
     <slyd-group>
-    	<IntroTest/>
-    </slyd-group>
-
-    <slyd-group>
-    	<slyd id="two-way">
-        <h2>2 Way</h2>
-        <h3>bi-directional CSS parallax</h3>
-      </slyd>
-      <slyd id="two-way">
-        <h2>2 Way</h2>
-        <h3>bi-directional CSS parallax</h3>
-      </slyd>
-      <slyd id="two-way">
-        <h2>2 Way</h2>
-        <h3>bi-directional CSS parallax</h3>
-      </slyd>
+    	<IntroTest />
+    	<IntroTest2 />
     </slyd-group>
 
   </slyds>
