adds review section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
-import IntroTest from '../slyds/intro.test.astro'
-import IntroTest2 from '../slyds/intro.test2.astro'
+import Overflow from '../slyds/review/Overflow.astro'
+import Touch from '../slyds/review/Touch.astro'
+import SnapType from '../slyds/review/SnapType.astro'
 ---
 
 <script>
@@ -24,8 +25,9 @@ import IntroTest2 from '../slyds/intro.test2.astro'
 	<slyds>
 
     <slyd-group>
-    	<IntroTest />
-    	<IntroTest2 />
+    	<Overflow />
+    	<Touch />
+    	<SnapType />
     </slyd-group>
 
   </slyds>
