--- a/src/slyds/intro.test.astro
+++ b/src/slyds/intro.test.astro
@@ -2,7 +2,7 @@
 import Prism from '../utils/Prism.astro'
 ---
 
-<slyd>
+<slyd id="intro">
   <h1 uppercase>Slide 1</h1>
   <Prism lang='css' code={`
 .scrollable {
