--- a/src/slyds/review/SnapType.astro
+++ b/src/slyds/review/SnapType.astro
@@ -1,3 +1,6 @@
 <slyd id="snap-type">
   <h2>Snap Type</h2>
+  <p lead>Dont Repeat Yourself</p>
+  <p lead>Dont Repeat Yourself</p>
+  <p color="brand-2">Dont Repeat Yourself</p>
 </slyd>
