fixes production builds

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,10 @@ import SnapType from '../slyds/review/SnapType.astro'
 	import "slyd"
 </script>
 
+<style is:global>
+	@import "/src/styles/index.css";
+</style>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,8 +22,6 @@ import SnapType from '../slyds/review/SnapType.astro'
 	<meta name="theme-color" content="#000000">
 
 	<link rel="icon" href="/favicon.svg" type="image/svg+xml">
-
-  <link rel="stylesheet" href="/src/styles/index.css">
 
 	<title>CSS Day 2022</title>
 </head>
