adds a couple slides and more styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,9 @@
 import Intro from '../slyds/Intro.astro'
 
 import Overflow from '../slyds/review/Overflow.astro'
+import HorizontalOverflow from '../slyds/review/HorizontalOverflow.astro'
+import VerticalOverflow from '../slyds/review/VerticalOverflow.astro'
+import XandY from '../slyds/review/XandY.astro'
 import Touch from '../slyds/review/Touch.astro'
 import SnapType from '../slyds/review/SnapType.astro'
 ---
@@ -34,6 +37,9 @@ import SnapType from '../slyds/review/SnapType.astro'
 
     <slyd-group>
     	<Overflow />
+    	<HorizontalOverflow />
+    	<VerticalOverflow />
+    	<XandY />
     	<Touch />
     	<SnapType />
     </slyd-group>
