--- a/src/slyds/Intro.astro
+++ b/src/slyds/Intro.astro
@@ -1,4 +1,4 @@
 <slyd id="intro">
   <h1 uppercase>oh snap!</h1>
-  <h3>Advanced <span highlight>scroll-snap</span></h3>
+  <h3>Advanced <span highlight>overflow</span></h3>
 </slyd>
