--- a/src/styles/components/demo-stage.css
+++ b/src/styles/components/demo-stage.css
@@ -8,6 +8,7 @@ demo-stage {
   max-inline-size: 90vw;
   inline-size: 100%;
   max-block-size: 20vw;
+  margin-block-start: var(--size-fluid-4);
 
   @nest slyd > &:first-of-type {
     margin-block-end: var(--size-5);
