--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,9 +28,9 @@ import DevTools from '../slyds/meta/DevTools.astro'
 	import "slyd"
 </script>
 
-<!-- <style is:global>
+<style is:global>
 	@import "/src/styles/index.css";
-</style> -->
+</style>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -40,7 +40,7 @@ import DevTools from '../slyds/meta/DevTools.astro'
 	<meta name="theme-color" content="#000000">
 
 	<link rel="icon" href="/favicon.svg" type="image/svg+xml">
-	<link rel="stylesheet" href="/src/styles/index.css">
+	<!-- <link rel="stylesheet" href="/src/styles/index.css"> -->
 
 	<title>CSS Day 2022</title>
 </head>
