--- a/src/slyds/review/Clipping.astro
+++ b/src/slyds/review/Clipping.astro
@@ -15,7 +15,7 @@ import Prism from '/src/utils/Prism.astro'
     </slyd-scrollport>
   </demo-stage>
 
-  <demo-stage>
+  <demo-stage style="grid-template-columns: auto 1fr;">
     <Prism lang='css' code={`
       .scroll-y {
         overflow-y: hidden;
