--- a/src/slyds/review/Glossary.astro
+++ b/src/slyds/review/Glossary.astro
@@ -7,7 +7,7 @@ import Prism from '/src/utils/Prism.astro'
   <code-gallery style="align-items: start; gap: 10vmin">
     <div text-left>
       <h3>Root Scroller</h3>
-      <p lead>Typically the HTML tag though, scroller promotion is possible</p>
+      <p lead>Top most scroller. Typically the HTML tag. <span highlight>Scroller promotion</span> possible.</p>
     </div>
     <div text-left>
       <h3>Implicit Scroller</h3>
@@ -19,15 +19,15 @@ import Prism from '/src/utils/Prism.astro'
     </div>
     <div text-left>
       <h3>Scroll Axis</h3>
-      <p lead>A 2D coordinate system to animate along</p>
+      <p lead>A 2D coordinate system to translate along</p>
     </div>
     <div text-left>
       <h3>Scroll Behavior</h3>
-      <p lead>Instant or animated scroll when JS API's are called</p>
+      <p lead>From CSS or JS, control if browser scroll should be instant or animated</p>
     </div>
     <div text-left>
       <h3>Overscroll Behavior</h3>
-      <p lead>Should the scroll inertia continue into the next parent scroller or not</p>
+      <p lead>Should a nested scroller trap it's inertia or not</p>
     </div>
     <div text-left>
       <h3>Overscroll Effect</h3>
