--- a/src/slyds/basics/Horizontal.astro
+++ b/src/slyds/basics/Horizontal.astro
@@ -2,7 +2,7 @@
 import Prism from '/src/utils/Prism.astro'
 ---
 
-<slyd id="basic-horizontal">
+<slyd id="basic-horizontal" class="lg-gap">
   <h2>Horizontal</h2>
   <demo-stage>
     <Prism lang='css' code={`
