--- a/src/slyds/meta/Title.astro
+++ b/src/slyds/meta/Title.astro
@@ -1,3 +1,4 @@
-<slyd id="snap-meta">
-  <h1 uppercase>Snap Meta</h1>
+<slyd id="advanced-snap">
+  <h1 uppercase>Scroll Snap</h1>
+  <h3>Advanced</h3>
 </slyd>
