restore prod build

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,9 +33,9 @@ import SnapTricks from '../slyds/tricks/Title.astro'
 	import "slyd"
 </script>
 
-<!--  <style is:global>
+<style is:global>
 	@import "/src/styles/index.css";
-</style> -->
+</style>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -45,7 +45,7 @@ import SnapTricks from '../slyds/tricks/Title.astro'
 	<meta name="theme-color" content="#000000">
 
 	<link rel="icon" href="/favicon.svg" type="image/svg+xml">
-	<link rel="stylesheet" href="/src/styles/index.css">
+	<!-- <link rel="stylesheet" href="/src/styles/index.css"> -->
 
 	<title>CSS Day 2022</title>
 </head>
