fills out behavior and padding

--- a/src/slyds/advanced/OverscrollBehavior.astro
+++ b/src/slyds/advanced/OverscrollBehavior.astro
@@ -5,13 +5,33 @@ import Prism from '/src/utils/Prism.astro'
 <slyd id="overscroll-behavior">
   <h2>Trapping Scroll</h2>
 
-  <Prism lang='css' code={`
-    .hungry-overscroll-monster {
-      overscroll-behavior: contain;
-      overscroll-behavior: auto contain;
-      overscroll-behavior-x: contain;
-      overscroll-behavior-y: contain;
-      overscroll-behavior-inline: 😅; 
-    }
-  `}/>
+  <demo-stage>
+    <Prism lang='css' code={`
+      .hungry-overscroll-monster {
+        overscroll-behavior: contain;
+        overscroll-behavior: auto contain;
+        overscroll-behavior-x: contain;
+        overscroll-behavior-y: contain;
+        overscroll-behavior-inline: 😅; 
+      }
+    `}/>
+    <div class="columns" style="max-block-size: 40vh;">
+      <div class="rows">
+        <h5>Contained</h5>
+        <slyd-scrollport class="tall vertical snap-y-prox">
+          {[...Array(5)].map(() => ( 
+            <div></div> 
+          ))}  
+        </slyd-scrollport>
+      </div>
+      <div class="rows">
+        <h5>Default</h5>
+        <slyd-scrollport class="tall vertical snap-y-prox" style="overscroll-behavior: auto">
+          {[...Array(5)].map(() => ( 
+            <div></div> 
+          ))}  
+        </slyd-scrollport>
+      </div>
+    </div>
+  </demo-stage>
 </slyd>
