--- a/src/slyds/advanced/RecapScrollport.astro
+++ b/src/slyds/advanced/RecapScrollport.astro
@@ -1,7 +1,7 @@
 <slyd id="advanced-recap-scrollport">
   <h2><span highlight>Scrollport</span> Recap</h2>
   <ul>
-    <li>snap & overflow axis</li>
+    <li>snap type & overflow axis</li>
     <li>gap, padding & scroll-padding</li>
     <li>overscroll-behavior</li>
   </ul>
